Update paper and repository for submission
- Add 5 new verified references (Da Rosa 2021, Moeckel 2024, Rogers 2022, JASPAR 2024, Medina-Ortiz 2022)
- Add Data Availability section to paper
- Fix GitHub URLs to point to Yegi03/PyScale-NT
- Fix author names in README to match paper
- Remove paper/ from .gitignore (needed for reproducibility)
- Fix grammatical flow in Section 2.1
- Remove duplicate package import and fix email format
- Add case study figures and results

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ build/
 resources/output/*
 !resources/output/.gitkeep
 
-# Archive (paper content - not part of the software)
+# Archive (development files not part of the software repository)
 archive/
 
 # Virtual environments
