--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ build/
 .DS_Store
 
 # Output files (generated at runtime)
-resources/output/*
-!resources/output/.gitkeep
+data/output/*
+!data/output/.gitkeep
 
 # Archive (development files not part of the software repository)
 archive/
